--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^5.0.0-alpha.23",
+    "@material-ui/icons": "^4.11.2",
+    "@types/node": "^14.14.22",
+    "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.1.3"
   }
 }
